--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "browser-sync": "^2.11.2",
+    "gulp": "^3.9.1",
     "gulp-htmlincluder": "^0.1.0",
-    "gulp": "^3.9.1"
+    "gulp-less": "^3.0.5",
+    "path": "^0.12.7"
   },
   "devDependencies": {},
   "scripts": {
